# OpenCV4_study

./: README.md
BasicInformation/: CMakeLists.txt
BasicInformation/src/: BasicTransform.cpp  test.cpp
Edge_Detection/: CMakeLists.txt
Edge_Detection/src/: Canny.cpp  Canny_color.cpp  DoG.cpp  DoG2.cpp  Laplacian.cpp  LineDetection.cpp  LineOperate.cpp  LoG.cpp  Sobel.cpp
Make_img/: CMakeLists.txt
Make_img/buil/: Line  Line2
Make_img/src/: Camera.cpp  Line.cpp  Line2.cpp
checkBox_detection/: CMakeLists.txt
checkBox_detection/include/: align_img.hpp  get_checkbox.hpp  template_match.hpp
checkBox_detection/src/: align_img.cpp  align_test.cpp  get_checkbox.cpp  get_histogram.cpp  main.cpp  make_template_mask.cpp  rectangle_detection.cpp  template_match.cpp
